--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
  <head>
  <meta charset="utf-8">
  <title>Peaky Blinders</title>
- <!---Länkar till stylesheet--->
+ <!--Länkar till stylesheet-->
  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <!---Implementerar en meny--->
+  <!--Implementerar en meny-->
   <ul>
     <li><a href=#top>The Plot</a></li>
     <li><a href="https://www.netflix.com/title/80002479">Watch Peaky Blinders</a></li>
@@ -21,7 +21,7 @@
       src="https://www.youtube.com/embed/oVzVdvGIC7U">
     </iframe>
 
-<!---Klassade headings samt klassad lorem ipsum text--->
+<!--Klassade headings samt klassad lorem ipsum text-->
   <h2 class="s1"><a id="top">Season 1</a> </h2>
   <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.</p>
   <h2 class="s2">Season 2</h2>
