--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <h1 class="title">Netflix Exclusive Peaky Blinders</h1>
   <!--Implementerar en meny-->
   <ul>
     <li><a href=#top>The Plot</a></li>
